--- a/RF_Final.Rmd
+++ b/RF_Final.Rmd
@@ -25,6 +25,7 @@ library(png)
 ### a) Provide your figure here:
 
 ```{r bad figure code, echo=FALSE}
+#here i create the bad plot - a scatterplot that shows flipper length and body mass
 data("penguins")
 badscatter<- ggplot(penguins, aes(x = flipper_length_mm, y = body_mass_g)) +
   geom_point(size = 5) + 
@@ -49,48 +50,6 @@ Here, I plotted a scatterplot showing the relationship between flipper length an
 *Write a data analysis pipeline in your .rmd RMarkdown file. You should be aiming to write a clear explanation of the steps, the figures visible, as well as clear code.*
 
 *Your code should include the steps practiced in the lab session:*
-
--   *Load the data*
-
--   *Appropriately clean the data*
-
--   *Create an Exploratory Figure (**not a boxplot**)*
-
--   *Save the figure*
-
--   ***New**: Run a statistical test*
-
--   ***New**: Create a Results Figure*
-
--   *Save the figure*
-
-*An exploratory figure shows raw data, such as the distribution of the data. A results figure demonstrates the stats method chosen, and includes the results of the stats test.*
-
-*Between your code, communicate clearly what you are doing and why.*
-
-*Your text should include:*
-
--   *Introduction*
-
--   *Hypothesis*
-
--   *Stats Method*
-
--   *Results*
-
--   *Discussion*
-
--   *Conclusion*
-
-*You will be marked on the following:*
-
-### a) Your code for readability and functionality
-
-### b) Your figures for communication
-
-### c) Your text communication of your analysis
-
-*Below is a template you can use.*
 
 ------------------------------------------------------------------------
 
